News UAT/force-app/main/default/objects/High_Level_Requirement__c/High_Level_Requirement__c.object-meta.xml
<CustomObject>
    <description>High level business objectives that can be used to group related detailed requirements.</description>
    <label>High Level Requirement</label>
    <nameField>
        <label>High Level Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Level Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>