News UAT/force-app/main/default/objects/High_Level_Requirement__c/fields/De_Scope_Requirements__c.field-meta.xml
<CustomField>
    <fullName>De_Scope_Requirements__c</fullName>
    <label>De-Scope Requirements</label>
    <summaryFilterItems>
        <field>Requirement__c.Scope__c</field>
        <operation>equals</operation>
        <value>Out-of-Scope (deferred)</value>
    </summaryFilterItems>
    <summaryForeignKey>Requirement__c.High_Level_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>