News UAT/force-app/main/default/objects/High_Level_Requirement__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <label># Delivered</label>
    <summaryFilterItems>
        <field>Requirement__c.Status__c</field>
        <operation>equals</operation>
        <value>Ready For Deploy</value>
    </summaryFilterItems>
    <summaryForeignKey>Requirement__c.High_Level_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>