News UAT/force-app/main/default/objects/High_Level_Requirement__c/fields/New_Requirement__c.field-meta.xml
<CustomField>
    <fullName>New_Requirement__c</fullName>
    <label>New Requirement</label>
    <summaryFilterItems>
        <field>Requirement__c.Requirements_Tracking__c</field>
        <operation>equals</operation>
        <value>New Requirement</value>
    </summaryFilterItems>
    <summaryForeignKey>Requirement__c.High_Level_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>