News UAT/force-app/main/default/objects/High_Level_Requirement__c/fields/Project_Objective__c.field-meta.xml
<CustomField>
    <fullName>Project_Objective__c</fullName>
    <label>Project Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improve New Customer Acquisition</fullName>
            </value>
            <value>
                <fullName>Increase Sales to Existing Customers</fullName>
            </value>
            <value>
                <fullName>Increase Retention of Existing Customers</fullName>
            </value>
            <value>
                <fullName>Improve Sales Effectiveness</fullName>
            </value>
            <value>
                <fullName>Avoid Strategic Project Costs</fullName>
            </value>
            <value>
                <fullName>Reduce Business Operation Costs</fullName>
            </value>
            <value>
                <fullName>Remove Risk of Legacy Platform Use</fullName>
            </value>
            <value>
                <fullName>Reduce Risk from Regulatory Compliance</fullName>
            </value>
            <value>
                <fullName>Improve Customer Interactions &amp; Insight</fullName>
            </value>
            <value>
                <fullName>Improve User Interaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>