News UAT/force-app/main/default/objects/High_Level_Requirement__c/fields/Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>Project_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Overview</label>
    <referenceTo>Project_Overview__c</referenceTo>
    <relationshipLabel>High Level Requirements</relationshipLabel>
    <relationshipName>High_Level_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>